# ogre-study

./: CMakeLists.txt  README.md
first-step/: CMakeLists.txt  README.md  main.cpp
